fixed the issue with scrolling on small screens (hopefully)

--- a/gallery-lib/gallery.css
+++ b/gallery-lib/gallery.css
@@ -8,14 +8,11 @@
 
 .gallery-line-container {
     overflow: hidden;
+    touch-action: none;
 }
 
 .gallery-draggable {
     cursor: grabbing;
-}
-
-.gallery-line {
-    overflow: hidden;
 }
 
 .gallery-slide {
